--- a/style/scroll.css
+++ b/style/scroll.css
@@ -9,6 +9,7 @@
     border: 2px solid black;
     border-radius: 10px;
     background-color: #1F2937;
+    border: 2px solid blue;
 }
 
 #scroll-h {
