--- a/style/digital.css
+++ b/style/digital.css
@@ -26,18 +26,17 @@
     border-radius: 5px;
     border: 2px solid blue;
     box-shadow: 0px 0px 10px gray;
-    background-color: #111827;
+    background-color: #1F2937;
 }
 
 #reset {
     align-self: center;
     font-weight: bold;
     font-size: 120%;
-    margin-left: 30px;
+    margin-left: 10px;
     height: 60px;
     padding: 0px 30px;
-    border-radius: 5px;
-    box-shadow: 0px 0px 10px gray;
+    border-radius: 100px;
 }
 
 @media (max-width:650px) {
