--- a/style/panda.css
+++ b/style/panda.css
@@ -7,14 +7,14 @@
 
 body {
     display: flex;
-    justify-content: space-around;
-    margin: 100px;
     background: #211d20;
 }
 
 #clock-container {
-    position: relative;
-    scale: 0.8;
+    position: fixed;
+    right: -100px;
+    top: -100px;
+    scale: 0.55;
 }
 
 .face {
@@ -254,7 +254,7 @@ body {
 
 
 
-@media (max-width:1234px) {
+/* @media (max-width:1234px) {
     body {
         transform: scale(0.9);
     }
@@ -294,4 +294,4 @@ body {
         position: absolute;
         bottom: -10%;
     }
-}
+} */
